/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/3.5/userguide/tutorial_java_projects.html
 */

ext {
    absPath = projectDir.getAbsolutePath()
}

subprojects {
    apply plugin: 'java'
    sourceCompatibility = 1.11
    // version =

    sourceSets {
        main {
            java {
                srcDir 'src/main/java'
            }
        }
        test {
            java {
                srcDir 'src/test/java'
            }
        }
    }

    repositories {
        flatDir {
            dirs "${rootProject.absPath}/libs"
        }
    }

    test.workingDir "${rootProject.absPath}/ttool/build"
    libsDirName = "${rootProject.absPath}/build"

    task copyRuntimeLibs(type: Copy) {
        project.configurations.getByName("runtimeOnly").setCanBeResolved(true)
        from configurations.implementation
        from 'runtime'
        into "${rootProject.absPath}/build"
    }
    build.finalizedBy(copyRuntimeLibs)

    clean.doFirst {
        delete "${rootProject.absPath}/build"
    }
}

allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.encoding = 'UTF-8'
            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Xlint:cast" << "-Xlint:divzero" << "-Xlint:empty" << "-Xlint:finally" << "-Xlint:fallthrough"
        }
    }
}
